# wgpu-voxel-engine

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  chunk.rs  chunk_builder.rs  chunk_generator.rs  chunk_loader.rs  coordinate.rs  cube.rs  debug_info.rs  engine.rs  frustum_culling.rs  graphics.rs  instance.rs  main.rs  perlin_noise.rs  pipeline.rs  player.rs  quad.rs  region.rs  renderer.rs  terrain_generator.rs  texture.rs  uniform.rs  vertex.rs  world.rs
src/renderer/: graphics.rs  instance.rs  mod.rs  pipeline.rs  renderer.rs  vertex.rs
src/shaders/: blit.frag  blit.frag.spv  blit.vert  blit.vert.spv  blit.wgsl  fragment.frag  fragment.frag.spv  frustum.frag  frustum.vert  frustum.vert.spv  vertex.vert  vertex.vert.spv
