[package]
name = "wgpu-voxel-engine"
version = "0.1.0"
authors = ["Leon <kings.of.funny.gemplays@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.9.0"
wgpu-subscriber = "0.1.0"
anyhow = "1.0.42"
winit = "0.25.0"
futures = "0.3.16"
bytemuck = {version = "1.7.2", features = [ "derive" ]}
nalgebra = "0.29.0"

[build-dependencies]
shaderc = "0.7.2"