[package]
name = "wgpu-voxel-engine"
version = "0.1.0"
authors = ["Leon <kings.of.funny.gemplays@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.10.1"
wgpu-subscriber = "0.1.0"
anyhow = "1.0.43"
winit = "0.25.0"
futures = "0.3.17"
bytemuck = "1.7.2"
nalgebra = "0.29.0"
image = "0.23.14"
rayon = "1.5.1"
bracket-noise = "0.8.2"
wgpu_glyph = "0.14.1"

[features]
default = ["derive"]
# spirv = ["wgpu/spirv"]
derive = ["bytemuck/derive"]

[build-dependencies]
shaderc = "0.7.3"